tests/failing/1-compile_time_f64/main.rgo
f64: @f64

main: (value: f64!) {
    @exit(0)
}
